manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "drugapi-43fb"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "drugapi-43fb"
  template:
    metadata:
      labels:
        app: "drugapi-43fb"
    spec:
      containers:
        - name: "drugapi-43fb"
          image: "drugs.azurecr.io/drugapi"
          ports:
          - containerPort: 80
